Fix header layout on mobile

--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ header p {
     color: #b6cce3;
     font-size: 1.1rem;
 }
+
+@media (max-width: 600px) {
+    header img {
+        height: 45px;
+    }
+}
 /* Fine header */
 
 /* Hamburger */
